--- a/public/register.html
+++ b/public/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/Login.css">
+    <link rel="stylesheet" href="styles/styles.css">
     <title>Register</title>
 </head>
 <body>
@@ -28,7 +28,7 @@
             </div>
             <input type="submit" value="Register">
             <div class="signup_link">
-                have an account? 
+                 have an account? 
                 <a href="login.html">sign in</a>
             </div>
         </form>
